<resources>
    <string name="app_name">TheVegBox</string>
    <string name="get_started_sub_title">Aplikasi pemesanan makanan sehat. Kami siap melayani anda.</string>
    <string name="masuk">Masuk</string>
    <string name="buat_akun_baru">Buat Akun Baru</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="username_atau_email">Username atau Email</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="atau">Atau</string>
    <string name="masuk_dengan_akun_google">Masuk dengan akun Google</string>
    <string name="buat_akun_baru_anda">Buat Akun Baru Anda</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk_sekarang">Masuk Sekarang</string>
    <string name="phone_number">Phone Number</string>
    <string name="beranda">Beranda</string>
    <string name="history">Pesanan</string>
    <string name="favorit">Favorit</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="profile">Profile</string>
    <string name="keranjang_kamu_masih_kosong">Keranjang Kamu Masih Kosong</string>
    <string name="tunggu_apa_lagi">Tunggu Apa lagi, Buruan beli produk kesukaanmu dan kembali ke sini.</string>
    <string name="riwayat_pesanan_masih_kosong">Riwayat Pesanan Masih Kosong</string>
    <string name="produk_yang_telah">Produk yang telah anda pesan nantinya akan muncul di sini.</string>
    <string name="favorites_masih_kosong">Favorites Masih Kosong</string>
    <string name="produk_yang_anda_sukai">Tekan gambar hati pada produk yang anda sukai dan kami akan menaruhnya di sini.</string>
    <string name="notifikasi_masih_kosong">Notifikasi Masih Kosong</string>
    <string name="jangan_lupa_untuk">Jangan lupa untuk selalu mengecek update terbaru kami ya.</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="pesan_lagi">Pesan Lagi</string>
    <string name="lupa_password">Forgot Password?</string>
    <string name="dot">•</string>
    <string name="lupa_password_jangan">Enter the email address you used when you joined and we’ll send you instructions to reset your password.</string>
    <string name="send_reset_instructions">Send Reset Instructions</string>
    <string name="confirm_sign_out">Confirm Sign Out</string>
    <string name="anda_yakin_ingin_keluar">Anda yakin ingin keluar?</string>
    <string name="kembali">Kembali</string>
    <string name="keluar">Keluar</string>
    <string name="konfirmasi_pemesanan">Konfirmasi Pemesanan</string>
    <string name="apakah_anda_yakin">Apakah anda yakin akan memesan produk ini? Produk yang dipesan tidak dapat dikembalikan.</string>
    <string name="pesan">Pesan</string>
    <string name="memulai_keranjang_baru">Memulai Keranjang Baru?</string>
    <string name="keranjang_sebelumnya_akan">Keranjang sebelumnya akan dihapus jika kamu menambah pesanan ini. Tetap lanjutkan?</string>
    <string name="lanjut">Lanjut</string>
    <string name="pesanan">Pesanan</string>
    <string name="favorite">Favorit</string>
    <string name="the_vegbox_v1_0">The VegBox V1.0</string>
    <string name="empty">‏‏‎ ‎</string>
    <string name="manage_account">Manage Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="ubah">Ubah</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="password_baru">Password Baru</string>
    <string name="john_doe">John Doe</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="pesan_instruksi_tidak_wajib">Pesan Instruksi (tidak wajib)</string>
    <string name="tinggalkan_pesan">Tinggalkan pesan…</string>
    <string name="misal_bayamnya_tidak_usah_ya">Misal : bayamnya tidak usah ya</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="hapus">Hapus</string>
    <string name="search_view">Hari ini kamu mau beli apa?</string>
</resources>