<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbProfileEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:elevation="4dp"
        android:theme="@style/Theme.Proyek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/edit_profile_menu"
        app:title="@string/empty"
        tools:targetApi="lollipop">

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivPosterProfile"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/seasoning"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/profile_image_gradient"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChangeProfilePoster"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/ubah"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:backgroundTint="@color/primaryColor"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_outline_camera_alt_24"
                app:iconGravity="textStart"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civImageProfile"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_marginTop="140dp"
            android:src="@drawable/salad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChangeProfileImage"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_button"
            app:icon="@drawable/ic_outline_camera_alt_24"
            app:iconGravity="top"
            app:layout_constraintBottom_toBottomOf="@id/civImageProfile"
            app:layout_constraintEnd_toEndOf="@id/civImageProfile" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvEditProfileText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/edit_profil"
        android:textColor="@color/primaryColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfUsernameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/username"
        app:boxBackgroundColor="@null"
        app:endIconMode="clear_text"
        app:errorEnabled="false"
        app:errorIconDrawable="@null"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEditProfileText"
        app:startIconDrawable="@drawable/ic_outline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsernameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_semibold"
            android:inputType="text"
            android:textColor="@color/black"
            tools:text="Richard Enrico" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfEmailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:hint="@string/email"
        app:boxBackgroundColor="@null"
        app:endIconMode="clear_text"
        app:errorEnabled="false"
        app:errorIconDrawable="@null"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfUsernameEdit"
        app:startIconDrawable="@drawable/ic_outline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_semibold"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            tools:text="richardkoko69@pornhub.com" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfPhoneEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:hint="@string/phone_number"
        app:boxBackgroundColor="@null"
        app:endIconMode="clear_text"
        app:errorEnabled="false"
        app:errorIconDrawable="@null"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfEmailEdit"
        app:startIconDrawable="@drawable/ic_outline_phone_24">

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/etPhoneEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_semibold"
            android:inputType="number"
            android:maxLength="20"
            android:textColor="@color/black"
            app:mask="+62 (___) ___ __ ___"
            tools:text="82290380510" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvChangePassText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/ganti_password"
        android:textColor="@color/primaryColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfPhoneEdit" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/password_baru"
        app:boxBackgroundColor="@null"
        app:endIconMode="password_toggle"
        app:errorEnabled="false"
        app:errorIconDrawable="@null"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChangePassText"
        app:startIconDrawable="@drawable/ic_outline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_semibold"
            android:inputType="textPassword"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>